Changed toList to collect